; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_sockbase.c_nn_sockbase_stat_increment.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_sockbase.c_nn_sockbase_stat_increment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_sockbase = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_sockbase_stat_increment(%struct.nn_sockbase* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.nn_sockbase*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.nn_sockbase* %0, %struct.nn_sockbase** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.nn_sockbase*, %struct.nn_sockbase** %4, align 8
  %8 = getelementptr inbounds %struct.nn_sockbase, %struct.nn_sockbase* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @nn_sock_stat_increment(i32 %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @nn_sock_stat_increment(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
